# Prompt-Compression-Benchmarker

./: .gitignore  .mcp.json  LICENSE  README.md  TESTING.md  pyproject.toml  requirements.txt
src/pcb/: __init__.py  cli.py  config.py  mcp_server.py  runner.py
src/pcb/compressors/: __init__.py  base.py  llmlingua.py  no_compression.py  pipeline.py  selective_context.py  tfidf.py
src/pcb/data/: coding_samples.jsonl  model_prices.json  rag_samples.jsonl  summarization_samples.jsonl
src/pcb/evaluators/: __init__.py  llm_judge.py
src/pcb/middleware/: __init__.py  anthropic_client.py  openai_client.py
src/pcb/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  terminal.py
src/pcb/tasks/: __init__.py  base.py  coding.py  rag.py  summarization.py
src/pcb/utils/: __init__.py  stopwords.py  token_counter.py
tests/: test_core.py  test_mcp_server.py
